# compiladores

./: README.md  correct.sh  dune  dune-project  myalcotest.ml  shell.nix  welcome.ml  welcome.opam
.github/workflows/: workflow.yml
TP01/: README.md  mycramtest.t
TP02/: .gitignore  README.md  ocaml-setup.sh  shell-opam.nix  shell.nix
TP02/.github/workflows/: workflow.yml
TP02/doc/: source-language.tex
TP02/src/lib/: dune  lexer.mll  parser.mly
TP03/: README.md  shell.nix
TP03/.github/workflows/: workflow.yml
TP03/doc/: README.md  mystyle.sty
TP03/src/driver/: driver.ml  dune
TP03/src/lib/: absyn.ml  absyntree.ml  dune  lexer.mll  location.ml  parser.mly  test_lexer.ml  test_parser.ml  tree.ml  util.ml
lib/: dune  hello.ml  hello.mli  test.ml
